--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asv-to-usv"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
 description = "ASV to USV: Convert ASCII Separated Values (ASV) to Unicode Separated Values (USV) such as for data markup, including for spreadsheets, databases, text files, and more."
@@ -15,7 +15,7 @@ categories = ["command-line-utilities", "encoding", "data-structures", "parsing"
 [dependencies]
 
 # usv: Unicode Separated Values
-usv = "=0.6"
+usv = "0.9.0"
 
 # clap: Command Line Argument Parser
 clap = { version = "4.5.2", features = ["cargo"] }
